[KARAF-5448] Fix java 9 warning for aries jndi activator